src/styles/global.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  --highlight: #0066ff;
  --highlight-dark: #005ce6;
  --highlight-light: rgba(0, 102, 255, 0.2);
  --foreground-high-contrast: #dedede;
  --foreground: #f7f7f8;
  --background: #fff;
  --tile-color: var(--background);
  --text: #000;
  --radius: 5px;
}

::selection {
  background-color: var(--highlight);
  color: white;
}

body {
  font-family: system-ui, -apple-system, "Segoe UI", Roboto, Helvetica, Arial,
    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
  line-height: 1.5;
  background-color: var(--background);
  color: var(--text);
}

a {
  text-decoration: none;
  color: inherit;
}

input {
  border: none;
  font-size: inherit;
}

button {
  background-color: inherit;
  border: none;
  font-size: inherit;
}

